# webdriver_kaifuku

./: .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  browser.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  test_suite.yml
src/webdriver_kaifuku/: __init__.py  tries.py  wharf.py
testing/: conftest.py  test_conf.py  test_config.py  test_open_close.py  test_session.py
