[project]
classifiers = [
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
description = "Restartable webdriver instances"
dynamic = ["version"]
keywords = ["selenium"]
license_file = "LICENSE"
name = "webdriver_kaifuku"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "attrs",
  "requests",
  "selenium>=4.0.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "wait_for",
]

[project.urls]
repository = "https://github.com/RonnyPfannschmidt/webdriver_kaifuku"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["/src/webdriver_kaifuku"]

[tool.hatch.version]
raw-options.version_scheme = "calver-by-date"
# re-enable after fixing https://github.com/pypa/setuptools_scm/issues/768
# raw-options.normalize = false
source = "vcs"
