[metadata]
name = webdriver_kaifuku

license_file = LICENSE
url = https://github.com/RonnyPfannschmidt-RedHat/webdriver_kaifuku
description = Restartable webdriver instances
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[bdist_wheel]
universal = true

[options]
packages = find:
install_requires=
  attrs>=18.0
  requests
  selenium
python_requires = >=3.6

[options.packages.find]
where = src
